FreeST/test/Programs/ValidTests/Functional/diffEqTypeNames/diffEqTypeNames.fst
type T = Int

type U = Int

n : T
n = 5

main : U
main = n
