FreeST/test/Programs/InvalidTests/ParseErrors/dupTypeDecl/dupTypeDecl.fst
type T = Int

type T = Bool
